[tool.poetry]
name = "bbplayer"
version = "1.0.0"
description = ""
authors = ["Gilbert Francois Duivesteijn <info@gilbertfrancois.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"


[tool.poetry.group.dev.dependencies]
pylint = "^4.0.6"
black = "^26.5.1"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311", "py312", "py313", "py314"]

[tool.isort]
profile = "black"
line_length = 120
py_version = 311

[tool.pylint.main]
py-version = "3.11"
disable = ["too-many-lines", "too-many-instance-attributes", "consider-using-with", "too-many-locals", "too-many-arguments", "too-many-positional-arguments", "too-many-statements", "global-statement"]
output-format = "colorized"

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:google\\.protobuf\\..*"
]

